taxid added to blast result

--- a/nextflow.config
+++ b/nextflow.config
@@ -5,8 +5,8 @@ params {
     reference_vir_file_list_path = "/media/molecularvirology/b6d973a5-06b6-4aae-9d77-bf28064b405e/Kijin/Viral_sequences_DB/list.txt"
     kraken_db_path = "/media/molecularvirology/Disk/DB/k2_standard"
     kaiju_db_path= "/media/molecularvirology/Disk/DB/kaiju_index_nr"
-    blastn_db_path= "/media/molecularvirology/Disk/BLAST_DB/RVDB/C-RVDBv22.0.fasta"
-    diamond_db_path="/media/molecularvirology/Disk/BLAST_DB/RVDB-prot/diamond_RVDB-prot"
+    blastn_db_path= "/media/molecularvirology/Disk/BLAST_DB/nucl_RVDB/RVDB-nucl"
+    diamond_db_path="/media/molecularvirology/Disk/BLAST_DB/prot_RVDB/RVDB-prot"
     exclude_keyword_file="/home/molecularvirology/Desktop/Kijin/excluded_keywords.txt"
     kronatools_db_path= "/media/molecularvirology/Disk/DB/kronaDB/taxonomy"
     bamcov_path="/home/molecularvirology/Desktop/Kijin/bamcov"
