taxon match added to nextflow script

--- a/nextflow.config
+++ b/nextflow.config
@@ -10,6 +10,7 @@ params {
     exclude_keyword_file="/home/molecularvirology/Desktop/Kijin/excluded_keywords.txt"
     kronatools_db_path= "/media/molecularvirology/Disk/DB/kronaDB/taxonomy"
     bamcov_path="/home/molecularvirology/Desktop/Kijin/bamcov"
+    taxonomizr_db_path = "/media/molecularvirology/Disk/DB/taxonomizr_db/accessionTaxa.sql"
 
     illumina_min_contig_length=200
 }
