nanopore contigs length filter added (300)

--- a/nextflow.config
+++ b/nextflow.config
@@ -13,6 +13,7 @@ params {
     taxonomizr_db_path = "/media/molecularvirology/Disk/DB/taxonomizr_db/accessionTaxa.sql"
 
     illumina_min_contig_length=200
+    nanopore_min_contig_length=300
 }
 
 process {
