scripts modified depending on the sensitivity of prep methods

--- a/nextflow.config
+++ b/nextflow.config
@@ -19,4 +19,5 @@ params {
 process {
    process.errorStrategy = { task.attempt <= 3 ? 'retry' : 'ignore' }
    process.maxRetries = 3
+   process.scratch = true
 }
