some options parameterized. some name refactored.

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,26 +1,23 @@
 params {
     help = false
     
-    trimmomatic_adater_path ="/opt/conda/envs/env/share/trimmomatic-0.39-2/adapters"
-    ref_vir_list = "/tmp/list.txt"
-    kraken_db_path = "/tmp/DB/minikraken2_v1_8GB"
-    kaiju_db_path= "/tmp/DB/kaiju_index_nr"
-    blastn_db_path= "/tmp/BLAST_DB/nucl_RVDB/RVDB-nucl"
-    diamond_db_path="/tmp/BLAST_DB/prot_RVDB/RVDB-prot"
-    taxonomizr_db_path = "/tmp/DB/taxonomizr_db/accessionTaxa.sql"
+    trimmomatic_adater_path =""
+    reference_virus_list = ""
+    kraken_db_path = ""
+    kaiju_db_path= ""
+    blastn_db_path= ""
+    diamond_db_path=""
+    taxonomizr_db_path = ""
 
     illumina_min_contig_length=200
+    nanopore_min_read_length=200
+    nanopore_read_type="1D"
     nanopore_min_contig_length=300
+
+    reference_mapping_minimum_avg_coverage="1.0"
 }
 
 process {
    errorStrategy = { task.attempt <= 3 ? 'retry' : 'ignore' }
    maxRetries = 3
-   scratch = true
-   container = 'skkujin/ku_pipeline:0.2'
-}
-
-docker {
-   enabled = true
-   temp = '/media/molecularvirology/Disk'
 }
