readablity improved. options modified.

--- a/nextflow.config
+++ b/nextflow.config
@@ -2,7 +2,7 @@ params {
     help = false
     
     trimmomatic_adater_path =""
-    reference_virus_list_path = ""
+    reference_list_path = ""
     kraken_db_path = ""
     kaiju_db_path= ""
     blastn_db_path= ""
