minor things fixed

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,86 @@
 .vscode/settings.json
+docs/make.bat
+docs/Makefile
+docs/build/doctrees/analyze_contigs.doctree
+docs/build/doctrees/de_novo_assembly.doctree
+docs/build/doctrees/environment.pickle
+docs/build/doctrees/filter.doctree
+docs/build/doctrees/index.doctree
+docs/build/doctrees/installation.doctree
+docs/build/doctrees/intro.doctree
+docs/build/doctrees/quality_control.doctree
+docs/build/doctrees/read_classification.doctree
+docs/build/doctrees/reference_mapping.doctree
+docs/build/doctrees/report_generate.doctree
+docs/build/html/.buildinfo
+docs/build/html/analyze_contigs.html
+docs/build/html/de_novo_assembly.html
+docs/build/html/filter.html
+docs/build/html/genindex.html
+docs/build/html/index.html
+docs/build/html/installation.html
+docs/build/html/intro.html
+docs/build/html/objects.inv
+docs/build/html/quality_control.html
+docs/build/html/read_classification.html
+docs/build/html/reference_mapping.html
+docs/build/html/report_generate.html
+docs/build/html/search.html
+docs/build/html/searchindex.js
+docs/build/html/_sources/analyze_contigs.rst.txt
+docs/build/html/_sources/de_novo_assembly.rst.txt
+docs/build/html/_sources/filter.rst.txt
+docs/build/html/_sources/index.rst.txt
+docs/build/html/_sources/installation.rst.txt
+docs/build/html/_sources/intro.rst.txt
+docs/build/html/_sources/quality_control.rst.txt
+docs/build/html/_sources/read_classification.rst.txt
+docs/build/html/_sources/reference_mapping.rst.txt
+docs/build/html/_sources/report_generate.rst.txt
+docs/build/html/_static/basic.css
+docs/build/html/_static/doctools.js
+docs/build/html/_static/documentation_options.js
+docs/build/html/_static/file.png
+docs/build/html/_static/jquery-3.5.1.js
+docs/build/html/_static/jquery.js
+docs/build/html/_static/language_data.js
+docs/build/html/_static/minus.png
+docs/build/html/_static/plus.png
+docs/build/html/_static/pygments.css
+docs/build/html/_static/searchtools.js
+docs/build/html/_static/underscore-1.13.1.js
+docs/build/html/_static/underscore.js
+docs/build/html/_static/css/badge_only.css
+docs/build/html/_static/css/theme.css
+docs/build/html/_static/css/fonts/fontawesome-webfont.eot
+docs/build/html/_static/css/fonts/fontawesome-webfont.svg
+docs/build/html/_static/css/fonts/fontawesome-webfont.ttf
+docs/build/html/_static/css/fonts/fontawesome-webfont.woff
+docs/build/html/_static/css/fonts/fontawesome-webfont.woff2
+docs/build/html/_static/css/fonts/lato-bold-italic.woff
+docs/build/html/_static/css/fonts/lato-bold-italic.woff2
+docs/build/html/_static/css/fonts/lato-bold.woff
+docs/build/html/_static/css/fonts/lato-bold.woff2
+docs/build/html/_static/css/fonts/lato-normal-italic.woff
+docs/build/html/_static/css/fonts/lato-normal-italic.woff2
+docs/build/html/_static/css/fonts/lato-normal.woff
+docs/build/html/_static/css/fonts/lato-normal.woff2
+docs/build/html/_static/css/fonts/Roboto-Slab-Bold.woff
+docs/build/html/_static/css/fonts/Roboto-Slab-Bold.woff2
+docs/build/html/_static/css/fonts/Roboto-Slab-Regular.woff
+docs/build/html/_static/css/fonts/Roboto-Slab-Regular.woff2
+docs/build/html/_static/js/badge_only.js
+docs/build/html/_static/js/html5shiv-printshiv.min.js
+docs/build/html/_static/js/html5shiv.min.js
+docs/build/html/_static/js/theme.js
+docs/source/analyze_contigs.rst
+docs/source/conf.py
+docs/source/de_novo_assembly.rst
+docs/source/filter.rst
+docs/source/index.rst
+docs/source/installation.rst
+docs/source/intro.rst
+docs/source/quality_control.rst
+docs/source/read_classification.rst
+docs/source/reference_mapping.rst
+docs/source/report_generate.rst
