--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,4 @@ docs/source/quality_control.rst
 docs/source/read_classification.rst
 docs/source/reference_mapping.rst
 docs/source/report_generate.rst
+scripts/.Rhistory
