--- a/nextflow.config
+++ b/nextflow.config
@@ -2,7 +2,7 @@ params {
     help = false
     pipeline_directory = "/home/molecularvirology/Desktop/Kijin/KU-virus-discovery-pipeline"
     trimmomatic_adater_path ="/home/molecularvirology/miniconda2/envs/vdp_srs/share/trimmomatic-0.39-2/adapters" 
-    reference_vir_file_list_path = "/media/molecularvirology/b6d973a5-06b6-4aae-9d77-bf28064b405e1/Kijin/Viral_sequences_DB/list.txt"
+    reference_list_path = "/media/molecularvirology/b6d973a5-06b6-4aae-9d77-bf28064b405e1/Kijin/Viral_sequences_DB/list.txt"
     kraken_db_path = "/media/molecularvirology/Disk/DB/minikraken2_v1_8GB"
     kaiju_db_path= "/media/molecularvirology/Disk/DB/kaiju_index_nr"
     blastn_db_path= "/media/molecularvirology/Disk/BLAST_DB/nucl_RVDB/RVDB-nucl"
@@ -11,6 +11,7 @@ params {
     kronatools_db_path= "/media/molecularvirology/Disk/DB/kronaDB/taxonomy"
     bamcov_path="/home/molecularvirology/Desktop/Kijin/bamcov"
     taxonomizr_db_path = "/media/molecularvirology/Disk/DB/taxonomizr_db/accessionTaxa.sql"
+    zoonotic_rank_dir = ""
 
     illumina_min_contig_length=200
     nanopore_min_read_length=200
