zoonotic rank dir variable updated.

--- a/nextflow.config
+++ b/nextflow.config
@@ -11,7 +11,7 @@ params {
     kronatools_db_path= "/media/molecularvirology/Disk/DB/kronaDB/taxonomy"
     bamcov_path="/home/molecularvirology/Desktop/Kijin/bamcov"
     taxonomizr_db_path = "/media/molecularvirology/Disk/DB/taxonomizr_db/accessionTaxa.sql"
-    zoonotic_rank_dir = ""
+    zoonotic_rank_dir = "/home/molecularvirology/Desktop/Kijin/zoonotic_rank"
 
     illumina_min_contig_length=200
     nanopore_min_read_length=200
