initial commit for docker version

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,13 +1,14 @@
 params {
     help = false
-    
-    trimmomatic_adater_path =""
-    reference_list_path = ""
-    kraken_db_path = ""
-    kaiju_db_path= ""
-    blastn_db_path= ""
-    diamond_db_path=""
-    taxonomizr_db_path = ""
+
+    trimmomatic_adater_path ="/opt/conda/envs/env/share/trimmomatic-0.39-2/adapters"
+    reference_list_path = "/tmp/Viral_sequences_DB/list.txt"
+    kraken_db_path = "/tmp/DB/"
+    kaiju_db_path= "/tmp/DB/"
+    blastn_db_path= "/tmp/BLAST_DB/nucl_RVDB/RVDB-nucl"
+    diamond_db_path="/tmp/BLAST_DB/prot_RVDB/RVDB-prot"
+    taxonomizr_db_path = "/tmp/DB/taxonomizr_db/accessionTaxa.sql"
+    zoonotic_rank_dir = "/root/zoonotic_rank"
 
     illumina_min_contig_length=200
     nanopore_min_read_length=200
@@ -20,4 +21,11 @@ params {
 process {
    errorStrategy = { task.attempt <= 3 ? 'retry' : 'ignore' }
    maxRetries = 3
+   scratch = true
+   container = 'skkujin/ku_pipeline:0.5.1'
+}
+
+docker {
+   enabled = true
+   temp = ''
 }
