apply the recent updates from CJ-workstation branch

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,13 +1,14 @@
 params {
     help = false
-    
-    trimmomatic_adater_path =""
+    trimmomatic_adater_path ="" 
     reference_list_path = ""
     kraken_db_path = ""
     kaiju_db_path= ""
     blastn_db_path= ""
     diamond_db_path=""
+    bamcov_path=""
     taxonomizr_db_path = ""
+    zoonotic_rank_dir = ""
 
     illumina_min_contig_length=200
     nanopore_min_read_length=200
